--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- using information from here to setup this file (https://benlansdell.github.io/computing/mathjax/) -->
 <html>
 
     <head>
@@ -6,16 +7,19 @@
     <script>
         // i have no idea if it will work, i am quite unfamiliar with html
         MathJax = {
-            tex: {
+            tex2jax: {
                 inlineMath: [['$', '$']],
                 displayMath: [['$$', '$$']],
+                processEscapes: true,
             },
             svg: {
                 fontCache: 'global'
             }
         };
     </script>
-    <script defer src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-svg.js"></script>
+
+    <!-- <script defer src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-svg.js"></script> -->
+    <script defer src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
 </head>
 
 <body>
