im losing my mind, going to pause on this; ig its already late anyways

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<!-- using information from here to setup this file (https://benlansdell.github.io/computing/mathjax/) -->
+<!-- using information from the following to setup this file:
+ - https://benlansdell.github.io/computing/mathjax/
+ - https://github.com/mathjax/MathJax-demos-web?tab=readme-ov-file
+ -->
 <html>
 
-    <head>
+<head>
     <!-- copied then expanded both scripts from mathjax api documentation (https://docs.mathjax.org/en/latest/web/configuration.html) -->
     <script>
         // i have no idea if it will work, i am quite unfamiliar with html
@@ -19,7 +22,7 @@
     </script>
 
     <!-- <script defer src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-svg.js"></script> -->
-    <script defer src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/mathjax@3/tex-svg.js"></script>
 </head>
 
 <body>
