trying older mathjax

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -22,7 +22,7 @@
     </script>
 
     <!-- <script defer src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-svg.js"></script> -->
-    <script defer src="https://cdn.jsdelivr.net/npm/mathjax@3/tex-svg.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
 </head>
 
 <body>
